// User management
Table user {
  id INTEGER [pk, increment]
  username VARCHAR(100) [not null, unique]
  email VARCHAR(200) [not null]
  password_hash VARCHAR [not null]
  created_at TIMESTAMP [not null, default: `CURRENT_TIMESTAMP`]
  deleted_at TIMESTAMP
  
  indexes {
    (email) [unique]
    (username) [unique]
  }
}


Table session {
    session_id INT [pk, increment]
    user_id INT [ref: > user.id]
    created_at TIMESTAMP [default: "CURRENT_TIMESTAMP"]

}

Table message {
    session_id INT [not null, ref: > session.session_id]
    message_id INT [pk, increment]
    user_id VARCHAR(50) [not null, ref: > user.id]
    created_at TIMESTAMP [not null, default: "CURRENT_TIMESTAMP"]

    role TEXT
    content TEXT
}

